# metabase-mcp

./: .cnb.yml  .env.example  .gitignore  Dockerfile  Makefile  README.md  cli.go  config.example.yaml  config.go  credentials.go  go.mod  main.go  metabase.go  pyproject.toml  server.py  tools.go
