[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metabase-mcp"
version = "2.0.0"
description = "Metabase MCP Server — HTTP transport with multi-user credential support"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
metabase-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
